@@ -1,4 +1,8 @@
-Mon Nov 16 01:06:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Nov 16 01:08:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread.c (rb_thread_start_timer_thread),
+	  thread_{pthread,win32}.c (native_stop_timer_thread): deal with
+	  working count.
 
 	* thread_pthread.c (native_cond_timedwait): use timeval instead of
 	  timespec.
